network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes: 
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels: 
          namespace: default-na
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: default-na
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
